# lilis

./: .travis.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac  lilis.cc  slisp.cc
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Makefile.am  builtins.cc  builtins.h  code.cc  code.h  engine.cc  engine.h  gc.h  main.cc  objects.cc  objects.h  parser.h
test/: CMakeLists.txt  Makefile.am  assert.lisp  bad-macro.lisp  begin.lisp  boolean-test.lisp  boolean.lisp  callcc-generate.lisp  callcc-test.lisp  callcc.lisp  catch.lispe  catch.lispo  catch.lispoe  compile-error-cast.lisp  compile-error-cast.lispe  compile-error-cast.lispoe  compile-error-export.lispe  compile-error-export.lispo  compile-error-export.lispoe  compile-error-import.lisp  compile-error-import.lispe  compile-error-import.lispo  compile-error-import.lispoe  compile-error-macro.lisp  compile-error-macro.lispe  compile-error-macro.lispo  compile-error-macro.lispoe  compile-error-nil.lispe  compile-error-nil.lispo  compile-error-nil.lispoe  compile-error-symbol.lispe  compile-error-symbol.lispo  compile-error-symbol.lispoe  condition.lisp  eval.lisp  fibonacci.lisp  generate.lisp  gensym.lisp  hanoi.lisp  hello.lisp  (+24 more)
